agregado libreria angular material

--- a/src/app/agregar-tarea/agregar-tarea.component.html
+++ b/src/app/agregar-tarea/agregar-tarea.component.html
@@ -1,1 +1,5 @@
-<p>agregar-tarea works!</p>
+<form class="agregar-tarea">
+  <mat-form-field >
+    <input matInput placeholder="Agregar Tarea" value="Tarea nueva">
+  </mat-form-field>
+</form>
