--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<app-lista-de-tareas></app-lista-de-tareas>
+<div class="app-tareas">
+	<h1>{{title}}</h1>
+	<app-agregar-tarea></app-agregar-tarea>
+	<app-lista-de-tareas></app-lista-de-tareas>
+</div>
+	
