listo el componente para agregar tareas

--- a/src/app/agregar-tarea/agregar-tarea.component.html
+++ b/src/app/agregar-tarea/agregar-tarea.component.html
@@ -1,6 +1,5 @@
 <form class="agregar-tarea" (ngSubmit)="onSubmit()">
   <mat-form-field >
-    <input matInput name="agregar-tarea" placeholder="Agregar Tarea" [(ngModel)]="tarea.name" required="required">
+    <input matInput placeholder="Agregar Tarea y presionar Enter" [formControl]="nuevaTarea" >
   </mat-form-field>
 </form>
-{{tarea.name}}
