refactor componente editar tarea

--- a/src/app/agregar-tarea/agregar-tarea.component.html
+++ b/src/app/agregar-tarea/agregar-tarea.component.html
@@ -1,5 +1,5 @@
 <form class="agregar-tarea" (ngSubmit)="onSubmit()">
   <mat-form-field >
-    <input matInput placeholder="Agregar Tarea y presionar Enter" [formControl]="nuevaTarea" >
+    <input matInput placeholder="Agregar Tarea y presionar Enter" [formControl]="nuevaTarea" autocomplete="off">
   </mat-form-field>
 </form>
