Se reemplazo la libreria de iconos por una que si incluye los iconos necesarios en outline

--- a/src/app/tarea-editor/tarea-editor.component.html
+++ b/src/app/tarea-editor/tarea-editor.component.html
@@ -2,7 +2,7 @@
 <form class="tarea-editor" (ngSubmit)="onSubmit()">
   <mat-form-field >
     <input matInput name="inputNameTarea" [ngModel]="tarea.name" autocomplete="off">
-    <span matPrefix><mat-icon>home</mat-icon></span>
-    <span matSuffix>.00ddd</span>
+    <span matPrefix><mat-icon>check_circle_outline</mat-icon><mat-icon>radio_button_unchecked</mat-icon></span>
+    <span matSuffix>.00dfd</span>
   </mat-form-field>
 </form>	
