listo el diseño de 3 partes

--- a/src/app/tarea-editor/tarea-editor.component.styl
+++ b/src/app/tarea-editor/tarea-editor.component.styl
@@ -1,3 +1,14 @@
 .tarea-editor
+	font-size 12px
 	mat-form-field
 		width 100%
+	.input-grid
+		clear both
+		.input-col-1
+			width 35px
+		.input-col-3
+			width 35px
+		.input-col-2
+			width calc( 100% - 70px )
+		& > div
+			float left
