--- a/src/app/tarea-editor/tarea-editor.component.html
+++ b/src/app/tarea-editor/tarea-editor.component.html
@@ -1,8 +1,19 @@
-<p>{{tarea.name}}</p>
-<form class="tarea-editor" (ngSubmit)="onSubmit()">
-  <mat-form-field >
-    <input matInput name="inputNameTarea" [ngModel]="tarea.name" autocomplete="off">
-    <span matPrefix><mat-icon>check_circle_outline</mat-icon><mat-icon>radio_button_unchecked</mat-icon></span>
-    <span matSuffix>.00dfd</span>
-  </mat-form-field>
+<form class="tarea-editor" #editorForm="ngForm" (ngSubmit)="onSubmit()">
+	<div class="input-grid">
+		<div class="input-col-1">
+			<button mat-icon-button>
+   				<mat-icon>check_circle_outline</mat-icon>
+  			</button>
+		</div>
+		<div class="input-col-2">
+			<mat-form-field >
+				<input matInput (dblclick)="onDblClick()" #inputTarea="ngModel" name="inputNameTarea" [(ngModel)]="tarea.name" autocomplete="off" [readonly]="editando">
+			</mat-form-field>
+		</div>
+		<div class="input-col-3">
+			<button mat-icon-button color="warn">
+   				<mat-icon>cancel</mat-icon>
+  			</button>
+		</div>
+	</div>
 </form>	
