--- a/src/app/tarea-editor/tarea-editor.component.styl
+++ b/src/app/tarea-editor/tarea-editor.component.styl
@@ -10,5 +10,10 @@
 			width 35px
 		.input-col-2
 			width calc( 100% - 70px )
+			.static
+				width 100%
+				font-weight: 400
+				line-height 40px
+				font-family: Roboto,"Helvetica Neue",sans-serif;
 		& > div
 			float left
