--- a/src/app/tarea-editor/tarea-editor.component.styl
+++ b/src/app/tarea-editor/tarea-editor.component.styl
@@ -11,6 +11,7 @@
 		.input-col-2
 			width calc( 100% - 70px )
 			.static
+				display block
 				width 100%
 				font-weight: 400
 				line-height 40px
