se agrego un dialogo y un reducer para limpiar tareas

--- a/src/app/lista-de-tareas/lista-de-tareas.component.html
+++ b/src/app/lista-de-tareas/lista-de-tareas.component.html
@@ -16,6 +16,6 @@
     <app-tarea-editor [tarea]="tarea"></app-tarea-editor>
   </div>
   <div>
-  	<button mat-stroked-button color="warn">Borrar Completadas</button>
+  	<button mat-stroked-button color="warn" (click)="onClickBorrar()">Borrar Completadas</button>
   </div>
 </div>
